# rust-litecoin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: fuzz.yml  rust.yml
contrib/: release.sh  test.sh
fuzz/: Cargo.toml  README.md  generate-files.sh
fuzz/fuzz_targets/hashes/: cbor.rs  json.rs  ripemd160.rs  sha1.rs  sha256.rs  sha512.rs  sha512_256.rs
fuzz/fuzz_targets/litecoin/: deser_net_msg.rs  deserialize_address.rs  deserialize_amount.rs  deserialize_block.rs  deserialize_prefilled_transaction.rs  deserialize_psbt.rs  deserialize_script.rs  deserialize_transaction.rs  deserialize_witness.rs  outpoint_string.rs  script_bytes_to_asm_fmt.rs
hashes/: CHANGELOG.md  Cargo.toml  README.md
hashes/embedded/: Cargo.toml
hashes/embedded/src/: main.rs
hashes/extended_tests/schemars/: Cargo.toml
hashes/src/: hash160.rs  lib.rs  sha256d.rs  sha256t.rs  util.rs
internals/: CHANGELOG.md  Cargo.toml  README.md
internals/src/: lib.rs  macros.rs
internals/src/error/: parse_error.rs
litecoin/: CHANGELOG.md  Cargo.toml
litecoin/contrib/: test.sh
litecoin/embedded/: Cargo.toml
litecoin/embedded/src/: main.rs
litecoin/examples/: bip32.rs  ecdsa-psbt.rs  handshake.rs  sighash.rs  taproot-psbt.rs
litecoin/src/: amount.rs  base58.rs  bip158.rs  bip32.rs  hash_types.rs  internal_macros.rs  lib.rs  network.rs  policy.rs  pow.rs  serde_utils.rs  sign_message.rs  string.rs  taproot.rs  test_macros.rs
litecoin/src/address/: error.rs  mod.rs
litecoin/tests/: psbt.rs  serde.rs  serde_opcodes.rs
logo/: README.md
(+39 files in other folders)
