[package]
name = "litecoin-internals"
version = "0.2.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "The Rust Litecoin developers"]
license = "CC0-1.0"
repository = "https://github.com/rust-litecoin/rust-litecoin/"
documentation = "https://docs.rs/litecoin-internals"
description = "Internal types and macros used by rust-litecoin ecosystem"
categories = ["cryptography::cryptocurrencies"]
keywords = ["internal"]
readme = "README.md"
edition = "2018"
exclude = ["tests", "contrib"]

[features]
default = []
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0.103", default-features = false, optional = true }

[dev-dependencies]
